fix spacing for sub-header

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -68,6 +68,6 @@ body {
     display: block;
     font-size: 20px;
     font-weight: 700;
-    letter-spacing: 17px;
+    letter-spacing: 15px;
 }
 
